# ThemeManager

./: .clang-tidy  .gitignore  LICENSE  README.md  meson.build
.github/workflows/: c-cpp.yml
src/: main.cpp
src/material/blend/: blend.cc  blend.h
src/material/cam/: cam.cc  cam.h  hct.cc  hct.h  hct_solver.cc  hct_solver.h  viewing_conditions.cc
src/material/contrast/: contrast.cc
src/material/dislike/: dislike.cc  dislike.h
src/material/dynamiccolor/: contrast_curve.h  dynamic_color.cc  dynamic_color.h  dynamic_scheme.cc  dynamic_scheme.h  material_dynamic_colors.cc  material_dynamic_colors.h  tone_delta_pair.h
src/material/palettes/: core.cc  core.h  tones.cc  tones.h
src/material/quantize/: celebi.cc  celebi.h  lab.cc  lab.h  wsmeans.cc  wsmeans.h  wu.cc  wu.h
src/material/scheme/: scheme.cc  scheme.h  scheme_content.cc  scheme_content.h  scheme_expressive.cc  scheme_expressive.h  scheme_fidelity.cc  scheme_fidelity.h  scheme_fruit_salad.cc  scheme_fruit_salad.h  scheme_monochrome.cc  scheme_monochrome.h  scheme_neutral.cc  scheme_neutral.h  scheme_rainbow.cc  scheme_rainbow.h  scheme_tonal_spot.cc  scheme_tonal_spot.h  scheme_vibrant.cc  scheme_vibrant.h
src/material/score/: score.cc  score.h
src/material/temperature/: temperature_cache.cc  temperature_cache.h
src/material/utils/: utils.cc
